--- a/src/main/resources/assets/cm/lang/en_us.lang
+++ b/src/main/resources/assets/cm/lang/en_us.lang
@@ -16,3 +16,4 @@ tile.chicken_block.name=Block of Chicken
 
 enchantment.sand_strider=Sand Strider
 enchantment.ablaze=Ablaze
+enchantment.auto_smelting=Auto Smelting
